entry form edit in office + dark mode fixes

--- a/src/app/internship-office/positions-add/positions-add.component.css
+++ b/src/app/internship-office/positions-add/positions-add.component.css
@@ -14,3 +14,62 @@
   -webkit-transform: translateX(-50%) translateY(-50%);
   transform: translateX(-50%) translateY(-50%);
 }
+
+.my-container {
+  background-color: white;
+  border: 1px solid #dee2e6;
+  border-radius: 6px;
+}
+
+::ng-deep .dark-mode .my-container {
+  background-color: #343a40 !important;
+  border: 1px solid #73797f;
+  border-radius: 6px;
+}
+
+::ng-deep .dark-mode .mat-form-field-outline {
+  color: #fff !important;
+  border-color: #fff !important;
+  background-color: rgba(255, 255, 255, 0.1) !important;
+}
+
+::ng-deep .dark-mode .positions-add-div {
+  background-color: #343a40 !important;
+}
+
+::ng-deep .dark-mode .mat-select-value-text {
+  color: white !important;
+}
+
+::ng-deep .dark-mode .mat-select-arrow {
+  color: white;
+}
+
+::ng-deep .dark-mode .mat-select-arrow-wrapper {
+  color: white;
+}
+
+::ng-deep .dark-mode .mat-form-field-type-mat-select .mat-form-field-label {
+  color: white;
+}
+
+::ng-deep .dark-mode ._ngcontent-oux-c304 {
+  color: #fff !important;
+  border-color: #fff !important;
+}
+
+::ng-deep .dark-mode .mat-select-panel {
+  background-color: rgba(27, 27, 27, 0.87) !important;
+}
+
+::ng-deep .dark-mode .mat-option {
+  color: #fff !important;
+}
+
+::ng-deep .dark-mode .mat-option:hover {
+  background-color: rgba(255, 255, 255, 0.4) !important;
+}
+
+::ng-deep .dark-mode .mat-option.mat-selected:not(:hover) {
+  background-color: rgba(255, 255, 255, 0.5);
+}
